--- a/Index.html
+++ b/Index.html
@@ -1,53 +1,25 @@
-<!DOCTYPE html>
+
+!DOCTYPE html>
 <html lang="pt">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Store NV</title>
-    <style>
-        body { margin:0; font-family: Arial; background:#f5f5f5; }
-        header { background:#111; color:white; padding:20px; text-align:center; font-size:22px; }
-        .hero {
-            padding:40px; text-align:center;
-            background:url('https://images.pexels.com/photos/5561913/pexels-photo-5561913.jpeg') center/cover;
-            color:white;
-        }
-        .btn {
-            background:#ffbf00; color:black; padding:15px 25px;
-            font-size:18px; border-radius:8px; text-decoration:none;
-        }
-        section { padding:30px; text-align:center; }
-        .product {
-            background:white; padding:20px; margin:20px auto;
-            width:90%; max-width:400px; border-radius:12px;
-            box-shadow:0 0 10px rgba(0,0,0,0.1);
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CEO NV - Página Inicial</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+      <h1>Bem-vindo ao CEO NV</h1>
+      <p>O teu sucesso começa agora.</p>
+  </header>
 
-<header>
-    Digital Store NV — Chegou a tua hora de vencer!
-</header>
+  <section class="hero">
+      <img src="capa.jpg" alt="Capa do Ebook">
+      <a href="#" class="btn">Comprar E-book</a>
+  </section>
 
-<div class="hero">
-    <h1>Aprende a ganhar 5.000 kz por dia online</h1>
-    <p>Transforma o teu telemóvel numa máquina de fazer dinheiro.</p>
-    <a class="btn" href="https://wa.me/244972898156">Comprar Agora</a>
-</div>
-
-<section>
-    <h2>E-book Oficial</h2>
-
-    <div class="product">
-        <h3>Como ganhar dinheiro online — Guia Completo</h3>
-        <p><strong>Preço:</strong> 5.000 KZ</p>
-        <p><strong>Pagamento:</strong> Multicaixa Express</p>
-        <a class="btn" href="https://wa.me/244972898156">Comprar pelo WhatsApp</a>
-    </div>
-
-    <p>Contactos: <strong>+244 972 898 156</strong></p>
-</section>
-
+  <footer>
+      <p>© 2025 CEO NV — Todos os direitos reservados</p>
+  </footer>
 </body>
 </html>
