--- a/index.html
+++ b/index.html
@@ -1,25 +1,15 @@
-
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CEO NV - Página Inicial</title>
-  <link rel="stylesheet" href="style.css">
+
+  <!-- Se o teu ficheiro CSS se chama Estless.css usamos esse nome -->
+  <link rel="stylesheet" href="Estless.css" />
+
+  <!-- ou se preferires usar style.css (mais comum), muda o nome do ficheiro CSS para style.css no repositório -->
 </head>
 <body>
-  <header>
-      <h1>Bem-vindo ao CEO NV</h1>
-      <p>O teu sucesso começa agora.</p>
-  </header>
-
-  <section class="hero">
-      <img src="capa.jpg" alt="Capa do Ebook">
-      <a href="#" class="btn">Comprar E-book</a>
-  </section>
-
-  <footer>
-      <p>© 2025 CEO NV — Todos os direitos reservados</p>
-  </footer>
 </body>
 </html>
