--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
 
   <!-- ou se preferires usar style.css (mais comum), muda o nome do ficheiro CSS para style.css no repositório -->
 </head>
-<body>
+<h1>Bem-vindo ao CEO NV</h1>
+<p>O teu sucesso começa agora.</p>
+
+<img src="file_00000000057c71f594341f33c89d09e9.png" alt="Capa do Ebook" style="width:100%; max-width:500px; display:block; margin:auto;">
+
+<p>
+    <a href="#">Comprar E-book</a>
+</p>
+
+<footer>
+    © 2025 CEO NV — Todos os direitos reservados
+</footer>
 </body>
 </html>
