--- a/index.html
+++ b/index.html
@@ -1,27 +1,40 @@
+
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CEO NV - Página Inicial</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CEO NV - Página Inicial</title>
 
-  <!-- Se o teu ficheiro CSS se chama Estless.css usamos esse nome -->
-  <link rel="stylesheet" href="Estless.css" />
-
-  <!-- ou se preferires usar style.css (mais comum), muda o nome do ficheiro CSS para style.css no repositório -->
+    <!-- CSS principal -->
+    <link rel="stylesheet" href="style.css" />
 </head>
+
+<body>
+
 <h1>Bem-vindo ao CEO NV</h1>
 <p>O teu sucesso começa agora.</p>
 
-<img src="file_00000000057c71f594341f33c89d09e9.png" alt="Capa do Ebook" style="width:100%; max-width:500px; display:block; margin:auto;">
+<!-- A tua imagem principal -->
+<img src="file_00000000057c71f594341f33c89d09e9.png"
+     alt="Capa do Ebook"
+     style="width:100%; max-width:500px; display:block; margin:auto;" />
 
-<p>
-    <a href="#">Comprar E-book</a>
+<p style="text-align:center; margin-top:20px;">
+    <a href="#" style="
+        background:red;
+        color:white;
+        padding:12px 25px;
+        text-decoration:none;
+        border-radius:8px;
+        font-size:18px;
+        font-weight:bold;">
+        Comprar E-book
+    </a>
 </p>
 
-<footer>
-    © 2025 CEO NV — Todos os direitos 
-reservados
+<footer style="text-align:center; margin-top:40px;">
+    © 2025 CEO NV — Todos os direitos reservados
 </footer>
 
 </body>
