--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>CEO NV - Página Inicial</title>
 
     <!-- CSS principal -->
-    <link rel="stylesheet" href="style.css" />
-</head>
+    <lin
+</head><link rel="stylesheet" href="Estless.css" />
 
 <body>
 
