--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <p>O teu sucesso começa agora.</p>
 
 <!-- A tua imagem principal -->
-<img src=";<div style="text-align:center;">
+<div style="text-align:center;">
     <img src="file_00000000057c71f594341f33c89d09e.png"
          alt="Capa do Ebook"
-         style="width:100%; max-width:500px; border-radius:12px; box-shadow:0px 4px 20px rgba(0,0,0,0.2);">
-</div> display:block; margin:auto;" />
+         style="width:100%; max-width:500px; border-radius:12px; box-shadow:0px 4px 20px rgba(0,0,0,0.2); display:block; margin:auto;">
+</div>
 
 <p style="text-align:center; margin-top:20px;">
     <a href="#" style="
