--- a/index.html
+++ b/index.html
@@ -2,41 +2,23 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CEO NV - Página Inicial</title>
 
-    <!-- CSS principal -->
-    <lin
-</head><link rel="stylesheet" href="Estless.css" />
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css">
+</head>
 
 <body>
 
-<h1>Bem-vindo ao CEO NV</h1>
-<p>O teu sucesso começa agora.</p>
+    <h1>Bem-vindo ao CEO NV</h1>
+    <p>O teu sucesso começa agora.</p>
 
-<!-- A tua imagem principal -->
-<img src="file_000000000057c71f594341f33c89d09e9.png"
-     alt="Capa do Ebook"
-     style="width:100%; max-width:500px;">
-</div>
-
-<p style="text-align:center; margin-top:20px;">
-    <a href="#" style="
-        background:red;
-        color:white;
-        padding:12px 25px;
-        text-decoration:none;
-        border-radius:8px;
-        font-size:18px;
-        font-weight:bold;">
-        Comprar E-book
-    </a>
-</p>
-
-<footer style="text-align:center; margin-top:40px;">
-    © 2025 CEO NV — Todos os direitos reservados
-</footer>
+    <!-- Imagem principal -->
+    <img src="file_000000000057c71f594341f33c89d09.png"
+         alt="Capa do Ebook"
+         style="width:100%; max-width:500px; display:block; margin:auto;">
 
 </body>
 </html>
