Update index.html for digital store layout

--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
-
 <!DOCTYPE html>
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CEO NV - Página Inicial</title>
-
-    <!-- CSS -->
+    <title>CEO NV - Loja Digital</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <h1>Bem-vindo ao CEO NV</h1>
-    <p>O teu sucesso começa agora.</p>
+    <!-- HEADER -->
+    <header>
+        <h2>Digital Store NV</h2>
+    </header>
 
-    <!-- Imagem principal -->
-    <img src="file_000000000057c71f594341f33c89d09.png"
-         alt="Capa do Ebook"
-         style="width:100%; max-width:500px; display:block; margin:auto;">
+    <!-- HERO -->
+    <section class="hero">
+        <h1>O Teu Sucesso Começa Agora</h1>
+        <p>Ebook exclusivo para aprender a ganhar dinheiro online.</p>
+
+        <img src="file_000000000057c71f594341f33c89d09.png" 
+             alt="Capa do Ebook" class="ebook-img">
+
+        <a class="btn" href="https://wa.me/244972898156?text=Quero+comprar+o+ebook">
+            💰 Comprar Agora
+        </a>
+    </section>
+
+    <!-- FOOTER -->
+    <footer>
+        <p>© 2025 CEO NV — Todos os direitos reservados.</p>
+    </footer>
 
 </body>
 </html>
