--- a/index.html
+++ b/index.html
@@ -1,36 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CEO NV - Loja Digital</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CEO NV - Página Inicial</title>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 20px;
+            background: #ffffff;
+        }
+
+        img {
+            width: 100%;
+            max-width: 500px;
+            border-radius: 10px;
+            margin-top: 20px;
+        }
+
+        h1 {
+            color: #d10000;
+        }
+
+        p {
+            font-size: 18px;
+        }
+    </style>
 </head>
 
 <body>
 
-    <!-- HEADER -->
-    <header>
-        <h2>Digital Store NV</h2>
-    </header>
+    <h1>Bem-vindo ao CEO NV</h1>
+    <p>O teu sucesso começa agora.</p>
 
-    <!-- HERO -->
-    <section class="hero">
-        <h1>O Teu Sucesso Começa Agora</h1>
-        <p>Ebook exclusivo para aprender a ganhar dinheiro online.</p>
-
-        <img src="file_000000000057c71f594341f33c89d09.png" 
-             alt="Capa do Ebook" class="ebook-img">
-
-        <a class="btn" href="https://wa.me/244972898156?text=Quero+comprar+o+ebook">
-            💰 Comprar Agora
-        </a>
-    </section>
-
-    <!-- FOOTER -->
-    <footer>
-        <p>© 2025 CEO NV — Todos os direitos reservados.</p>
-    </footer>
+    <!-- A tua imagem principal -->
+    <img src="https://raw.githubusercontent.com/ceonv/Ceo-nv-site/main/file_000000000057c71f594341f33c89d09e9.png"
+         alt="Capa do Ebook">
 
 </body>
 </html>
