--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
     <p>O teu sucesso começa agora.</p>
 
     <!-- A tua imagem principal -->
-    <img src="https://raw.githubusercontent.com/ceonv/Ceo-nv-site/main/file_000000000057c71f594341f33c89d09e9.png"
-         alt="Capa do Ebook">
+    <img src="file_000000000057c71f594341f33c89d09e9.png"
+     alt="Capa do Ebook"
+     style="width: 100%; max-width: 700px; display:block; margin:auto;">
 
 </body>
 </html>
