--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
 </head>
 <body>
 
-<header class="topbar">
-  <div class="brand">Digital Store NV</div>
-  <nav class="nav"><a href="#ebook">Ebook</a><a href="#beneficios">Benefícios</a><a href="#autor">Sobre</a><a href="#pagamento">Pagar</a></nav>
-</header>
+
+ <header class="menu">
+  <h1>Digital Store NV</h1>
+  <nav>
+    <a href="#ebook">Ebook</a>
+    <a href="#beneficios">Benefícios</a>
+    <a href="#sobre">Sobre</a>
+    <a href="#pagar">Pagar</a>
+  </nav>
+</header> 
 
 <!-- HERO -->
 <section class="hero">
