--- a/index.html
+++ b/index.html
@@ -1,150 +1,139 @@
-<!doctype html>
+
+!doctype html>
 <html lang="pt">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Digital Store NV — Chegou a Tua Hora de Vencer</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
+  <meta name="description" content="Ebook 50 Ideias de Negócio — passo a passo para começar a lucrar em Angola.">
 </head>
 <body>
 
+<header class="topbar">
+  <div class="container">
+    <div class="brand">Digital Store NV</div>
+    <nav class="menu">
+      <a href="#hero">Início</a>
+      <a href="#ebook">Ebook</a>
+      <a href="#beneficios">Benefícios</a>
+      <a href="#autor">Sobre</a>
+      <a href="#pagamento">Pagar</a>
+    </nav>
+  </div>
+</header>
 
- <header class="menu">
-  <h1>Digital Store NV</h1>
-  <nav>
-    <a href="#ebook">Ebook</a>
-    <a href="#beneficios">Benefícios</a>
-    <a href="#sobre">Sobre</a>
-    <a href="#pagar">Pagar</a>
-  </nav>
-</header> 
-
-<!-- HERO -->
-<section class="hero">
-  <div class="hero-inner">
+<section id="hero" class="hero">
+  <div class="container hero-inner">
     <div class="hero-left">
       <h1>CHEGOU A TUA HORA DE VENCER</h1>
       <p class="tagline">50 IDEIAS DE NEGÓCIO aplicáveis em Angola — passo a passo para começar a lucrar.</p>
-      <div class="price">Preço de lançamento: <strong>5.000 Kz</strong></div>
+      <div class="price">Lançamento: <strong>5.000 Kz</strong></div>
       <div class="cta-row">
         <a class="btn btn-gold" href="#pagamento">PAGAR AGORA — 5.000 Kz</a>
-        <a class="btn btn-outline" href="https://wa.me/244972898156?text=Quero+comprar+o+Ebook+Chegou+a+Tua+Hora+de+Vencer">Enviar Mensagem</a>
+        <a class="btn btn-outline" href="https://wa.me/244972898156?text=Quero+comprar+o+Ebook+Chegou+a+Tua+Hora+de+Vencer" target="_blank">Enviar Mensagem</a>
       </div>
       <ul class="highlights">
         <li>50 ideias práticas e testadas</li>
         <li>Baixo investimento inicial</li>
-        <li>Guias passo a passo para implementar</li>
+        <li>Modelos fáceis de implementar</li>
       </ul>
     </div>
+
     <div class="hero-right">
-      <img src="file_000000000057c71f594341f33c89d09e9.png" alt="Capa do Ebook" class="cover" />
+      <img class="cover" src="file_00000000057c71f594341f33c89d09e9.png" alt="Capa do Ebook — Chegou a Tua Hora de Vencer">
     </div>
   </div>
 </section>
 
-<!-- EBOOK -->
-<section id="ebook" class="section card">
-  <div class="container">
-    <h2>Ebook — Chegou a Tua Hora de Vencer</h2>
-    <p>Um manual prático com 50 ideias de negócio adaptadas à realidade de Angola, com passos e modelos para começar já.</p>
+<main>
+  <section id="ebook" class="section card">
+    <div class="container">
+      <h2>Ebook — Chegou a Tua Hora de Vencer</h2>
+      <p>Um manual prático com 50 ideias de negócio adaptadas à realidade de Angola, com passos e modelos para começar já.</p>
 
-    <div class="product">
-      <img src="file_000000000057c71f594341f33c89d09e9.png" alt="Capa do Ebook" />
-      <div class="product-info">
-        <h3>O que tens neste ebook</h3>
-        <ul>
-          <li>Modelos simples de execução</li>
-          <li>Exemplos reais em Angola</li>
-          <li>Checklist para começar em 7 dias</li>
-        </ul>
-        <div class="price-block">
-          <div class="price-big">5.000 Kz</div>
-          <a class="btn btn-gold" href="#pagamento">Comprar pelo Multicaixa</a>
+      <div class="product">
+        <img src="file_00000000057c71f594341f33c89d09e9.png" alt="Capa do Ebook" class="product-cover">
+        <div class="product-info">
+          <h3>O que vais encontrar</h3>
+          <ul>
+            <li>Modelos simples de execução</li>
+            <li>Exemplos reais em Angola</li>
+            <li>Checklist para começar em 7 dias</li>
+            <li>Bónus prático para divulgação rápida</li>
+          </ul>
+          <div class="price-block">
+            <div class="price-big">5.000 Kz</div>
+            <a class="btn btn-gold" href="#pagamento">Pagar pelo Multicaixa</a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<!-- BENEFICIOS -->
-<section id="beneficios" class="section">
-  <div class="container">
-    <h2>Por que este ebook funciona</h2>
-    <div class="benefits-grid">
-      <div class="benefit">Prático e direto</div>
-      <div class="benefit">Focado no mercado angolano</div>
-      <div class="benefit">Baixo custo de implementação</div>
-      <div class="benefit">Resultados rápidos</div>
-    </div>
-  </div>
-</section>
-
-<!-- AUTOR -->
-<section id="autor" class="section card">
-  <div class="container author-row">
-    <img src="file_000000000057c71f594341f33c89d09e9.png" alt="Autor" class="author-photo" />
-    <div>
-      <h3>Narciso Virgílio Salgueiro — CEO NV</h3>
-      <p>Sou empreendedor angolano e criador deste guia prático. A minha missão é ajudar outros a gerarem rendimento diário com ideias simples.</p>
-      <a class="btn btn-outline" href="contactos.html">Contactar</a>
-    </div>
-  </div>
-</section>
-
-<!-- PAGAMENTO -->
-<section id="pagamento" class="section card payment-section">
-  <div class="container">
-    <h2>Pagamento — Multicaixa Express</h2>
-
-    <div class="payment-wrap">
-      <div class="payment-instructions">
-        <p><strong>Beneficiário:</strong> Narciso Virgílio Salgueiro</p>
-        <p><strong>Conta (Multicaixa Express):</strong> <strong>972 898 156</strong></p>
-        <p><strong>Valor:</strong> 5.000 Kz</p>
-        <p><strong>Descrição:</strong> Pagamento do Ebook — Chegou a Tua Hora de Vencer</p>
-        <p>Depois de pagar, volta aqui e envia o comprovativo no formulário ao lado — validamos e enviamos o link de download.</p>
-      </div>
-
-      <div class="payment-form">
-        <label>Nome completo</label>
-        <input id="buyerName" type="text" placeholder="Seu nome completo" />
-        <label>Upload do comprovativo</label>
-        <input id="proofFile" type="file" accept="image/*" />
-        <button id="sendProof" class="btn btn-gold">ENVIAR COMPROVATIVO</button>
-
-        <p class="muted">Após validação vamos enviar o link do ebook para teu WhatsApp.</p>
+  <section id="beneficios" class="section">
+    <div class="container">
+      <h2>Por que este ebook funciona</h2>
+      <div class="benefits-grid">
+        <div class="benefit">Prático e direto — sem enrolação</div>
+        <div class="benefit">Focado no mercado angolano</div>
+        <div class="benefit">Baixo custo de implementação</div>
+        <div class="benefit">Resultados rápidos</div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<!-- THANKS (hidden until comprovativo) -->
-<section id="thanks" class="section card" style="display:none;">
-  <div class="container">
-    <h2>Obrigado — Pedido recebido</h2>
-    <p>Vamos validar o comprovativo. Se estiver tudo correcto, o link de download será enviado pelo WhatsApp.</p>
-    <a id="downloadLink" class="btn btn-outline" href="assets/ebook.pdf" download>Baixar Ebook (após validação)</a>
-  </div>
-</section>
+  <section id="autor" class="section card">
+    <div class="container author-row">
+      <img class="author-photo" src="file_00000000057c71f594341f33c89d09e9.png" alt="Narciso Virgílio — CEO NV">
+      <div>
+        <h3>Narciso Virgílio Salgueiro — CEO NV</h3>
+        <p>Sou empreendedor angolano e autor deste guia prático. Ajudo pessoas a transformarem ideias simples em negócios lucrativos.</p>
+        <a class="btn btn-outline" href="contactos.html">Contactar</a>
+      </div>
+    </div>
+  </section>
+
+  <section id="pagamento" class="section card payment-section">
+    <div class="container">
+      <h2>Pagamento — Multicaixa Express</h2>
+      <div class="payment-grid">
+        <div class="payment-instructions">
+          <p><strong>Beneficiário:</strong> Narciso Virgílio Salgueiro</p>
+          <p><strong>Conta (Multicaixa Express):</strong> <strong>972 898 156</strong></p>
+          <p><strong>Valor:</strong> 5.000 Kz</p>
+          <p><strong>Descrição:</strong> Pagamento do Ebook — Chegou a Tua Hora de Vencer</p>
+          <p>Depois de pagar, volta aqui e envia o comprovativo no formulário — validamos e enviamos o link de download.</p>
+        </div>
+
+        <div class="payment-form">
+          <label>Nome completo</label>
+          <input id="buyerName" type="text" placeholder="Seu nome completo" />
+          <label>Upload do comprovativo</label>
+          <input id="proofFile" type="file" accept="image/*" />
+          <button id="sendProof" class="btn btn-gold">ENVIAR COMPROVATIVO</button>
+          <p class="muted">Ao enviar, validaremos e enviaremos o link do e-book via WhatsApp.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="thanks" class="section card" style="display:none;">
+    <div class="container">
+      <h2>Obrigado — Pedido recebido</h2>
+      <p>Vamos validar o comprovativo. Se estiver tudo correcto, o link será enviado por WhatsApp.</p>
+      <a id="downloadLink" class="btn btn-outline" href="assets/ebook.pdf" download>Baixar Ebook (após validação)</a>
+    </div>
+  </section>
+</main>
 
 <footer class="sitefoot">
-  <div>© 2025 Digital Store NV</div>
-  <div>Contacto: <a href="https://wa.me/244972898156">+244 972 898 156</a></div>
+  <div class="container">
+    <div>© 2025 Digital Store NV</div>
+    <div>Contacto: <a href="https://wa.me/244972898156">+244 972 898 156</a></div>
+  </div>
 </footer>
 
-<script>
-document.getElementById('sendProof').addEventListener('click', function(){
-  var name = document.getElementById('buyerName').value.trim();
-  var file = document.getElementById('proofFile').files[0];
-  if(!name){ alert('Escreve o teu nome completo.'); return; }
-  if(!file){ alert('Anexa o comprovativo do pagamento.'); return; }
-
-  // Simulação de envio / validação (no site real, envia para servidor)
-  alert('Comprovativo recebido. Em breve validaremos e enviaremos o link via WhatsApp.');
-  document.getElementById('thanks').style.display = 'block';
-  document.getElementById('thanks').scrollIntoView({behavior:'smooth'});
-});
-</script>
-
+<script src="script.js"></script>
 </body>
 </html>
