Add Tidio script for chat integration

--- a/index.html
+++ b/index.html
@@ -137,3 +137,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+<script src="//code.tidio.co/p28kxgqpzhlcblc2q2rq6jfnkkwmt5vn.js" async></script>
