--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
   <meta name="description" content="Ebook 50 Ideias de Negócio — passo a passo para começar a lucrar em Angola.">
 </head>
 <body>
+<!-- BOT DE VENDAS -->
+<div id="chat-container">
+    <div id="chat">
+        <div class="bot-msg">Olá! 👋 Sou o assistente automático de vendas. Posso ajudar?</div>
+    </div>
 
+    <div id="chat-input">
+        <input type="text" id="mensagem" placeholder="Escreve aqui..." />
+        <button onclick="enviar()">Enviar</button>
+    </div>
+</div>
+<script src="script.js"></script>
 <header class="topbar">
   <div class="container">
     <div class="brand">Digital Store NV</div>
